--- a/cloud-gateway/src/main/resources/application.yml
+++ b/cloud-gateway/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   redis:
     database: 0
     port: 6379
-    host: 120.46.213.254
+    host: localhost
     password: Dhj1314520
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -28,15 +28,15 @@ spring:
       maxPoolPreparedStatementPerConnectionSize: 20
       useGlobalDataSourceStat: true
       connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
-    jdbc-url: jdbc:mysql://120.46.213.254.:3306/casbin?characterEncoding=utf-8&allowMultiQueries=true&serverTimezone=Asia/Shanghai
+    jdbc-url: jdbc:mysql://localhost:3306/mychat?characterEncoding=utf-8&allowMultiQueries=true&serverTimezone=Asia/Shanghai
     password: Dhj1314520
     type: com.alibaba.druid.pool.DruidDataSource
-    url: jdbc:mysql://120.46.213.254:3306/casbin?characterEncoding=utf-8&allowMultiQueries=true&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/mychat?characterEncoding=utf-8&allowMultiQueries=true&serverTimezone=Asia/Shanghai
     username: root
   cloud:
     nacos:
       discovery:
-        server-addr: 120.46.213.254:8848  #注册进Nacos
+        server-addr: localhost:8848  #注册进Nacos
     sentinel:
       transport:
         port: 9999   #指定和Sentinel控制台交互的端口
@@ -44,7 +44,7 @@ spring:
       datasource: #添加Nacos数据源配置，sentinel持久化
         ds1:
           nacos:
-            server-addr: 120.46.213.254:8848
+            server-addr: localhost:8848
             dataId: gateway-sentinel
             groupId: DEFAULT_GROUP
             data-type: json
@@ -76,7 +76,7 @@ spring:
         - id: user-auth
           uri: lb://user-auth
           predicates:
-            - Path=/user-auth/**
+            - Path=/auth/**
           filters:
             - StripPrefix=1
   security:
