--- a/connector-2/src/main/resources/application.yml
+++ b/connector-2/src/main/resources/application.yml
@@ -11,9 +11,9 @@ spring:
     sentinel:
       transport:
         port: 9999   #指定和Sentinel控制台交互的端口
-        dashboard: 120.46.213.254:8888  #Sentinel控制台服务地址
+        dashboard: localhost:8888  #Sentinel控制台服务地址
   redis:
-    host: 120.46.213.254
+    host: localhost
     port: 6379
     password:
     database: 0
@@ -24,7 +24,7 @@ feign:
     enabled: true
 
 rocketmq:
-  name-server: 120.46.213.254:9876
+  name-server: localhost:9876
   producer:
     group: MSG_GROUP
 
@@ -40,10 +40,10 @@ dubbo:
     port: 20891  # dubbo服务暴露的端口
   registry:
     protocol: nacos
-    address: 120.46.213.254:8848
+    address: localhost:8848
   config-center:
     protocol: nacos
-    address: 120.46.213.254:8848
+    address: localhost:8848
   metadata-report:
     protocol: nacos
-    address: 120.46.213.254:8848
+    address: localhost:8848
